--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.3",
+    "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.4"
   },
   "version": "1.0.0",
